vlib/v/checker/tests/negative_assign_to_unsigned.vv
fn main() {
    mut u := u32(10)
    u = -10
    eprintln(u)
}